--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "sass": "^1.63.5",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue3-lottie": "^3.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
