--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "firebase": "^10.12.2",
     "gsap": "^3.12.5",
     "hover-effect": "^1.2.1",
     "jquery": "^3.7.1",
